added views to db

--- a/modules/insights/client/views/list-insights.client.view.html
+++ b/modules/insights/client/views/list-insights.client.view.html
@@ -29,7 +29,7 @@
       <td ng-bind="insight.title"></td>
       <td >Bit.ly/weihzxx</td>
       <td ng-bind="insight.orig_url"></td>
-      <td>78</td>
+      <td ng-bind="insight.views"></td>
       <td>4</td>
     </tr>
 
