--- a/modules/insights/client/views/view-insight.client.view.html
+++ b/modules/insights/client/views/view-insight.client.view.html
@@ -15,5 +15,5 @@
       <span ng-bind="insight.user.displayName"></span>
     </em>
   </small>
-  <p class="lead" ng-bind="insight.insight"></p>
+  <p class="lead" ng-bind="insight.content"></p>
 </section>
