--- a/modules/insights/client/views/edit-insight.client.view.html
+++ b/modules/insights/client/views/edit-insight.client.view.html
@@ -49,5 +49,9 @@
     </form>
   </div>
 
-  <div ng-bind-html-unsafe="rawHtml" class="col-xs-9"><div>
+  <div class="col-xs-9">
+
+    <iframe src="{{embedURL}}"></iframe>
+
+  <div>
 </section>
