--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -35,3 +35,31 @@ a:hover .header-profile-image {
 .has-error .help-inline.error-text {
   display: inline;
 }
+.home-create-insight {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  width: 60%;
+  height: 100px;
+}
+.custom-help-block {
+  font-style: italic;
+  padding-left: 20px;
+}
+.orig-url {
+  width: 64% !important;
+  border: 1px solid #0099FF;
+}
+.no-border-radius {
+  border-radius: 0 !important;
+}
+.light-blue-button {
+  color: #ffffff;
+  background-color: #0099FF;
+}
+.create-insight-button:hover {
+  color: #ffffff;
+}
