--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -1,22 +1,16 @@
 <section ng-controller="InsightsController">
 
-  <div class="col-md-12">
+  <div class="col-md-12 home-create-insight">
 
-    <p>Create a New Insight - Boost your Identity and Social Leads</p>
-
-    <form name="insightForm" class="form-horizontal" ng-submit="create(insightForm.$valid)" novalidate>
-        <fieldset>
-          <div class="form-group">
-            <input name="orig_url" ng-model="orig_url" id="orig_url" class="form-control" placeholder="Type URL of content (e.g. www.techcrunch.com/article)">
-          </div>
-          <div class="form-group">
-            <input type="submit" class="btn btn-default" value="Create Insight">
-          </div>
-          <div ng-show="error" class="text-danger">
-            <strong ng-bind="error"></strong>
-          </div>
-        </fieldset>
-      </form>
+    <form name="insightForm" ng-submit="create(insightForm.$valid)" novalidate class="form-inline">
+      <div class="form-group" style="width:100%;">
+        <p class="help-block custom-help-block">Create a New Insight - Boost your Identity and Social Leads</p>
+        <div class="input-group" style="width:100%;">
+          <input type="text" class="form-control orig-url no-border-radius" id="orig_url" placeholder="Type URL of content (e.g. www.techcrunch.com/article)">
+          <button type="submit" class="btn light-blue-button no-border-radius create-insight-button">Create Insight</button>
+        </div>
+      </div>
+    </form>
 
   </div>
 
