--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -3,13 +3,12 @@
   <div class="col-md-12 home-create-insight">
 
     <form name="insightForm" ng-submit="create(insightForm.$valid)" novalidate class="form-inline">
-      <div class="form-group" style="width:100%;">
-        <p class="help-block custom-help-block">Create a New Insight - Boost your Identity and Social Leads</p>
-        <div class="input-group" style="width:100%;">
-          <input type="text" class="form-control orig-url no-border-radius" id="orig_url" placeholder="Type URL of content (e.g. www.techcrunch.com/article)">
-          <button type="submit" class="btn light-blue-button no-border-radius create-insight-button">Create Insight</button>
-        </div>
-      </div>
+      <p class="help-block custom-help-block">Create a New Insight - Boost your Identity and Social Leads</p>
+      <div class="form-group col-sm-10" style="padding: 0px;">
+        <input type="text" class="form-control orig-url no-border-radius" id="orig_url" placeholder="Type URL of content (e.g. www.techcrunch.com/article)">
+       </div>
+      <button type="submit" class="btn light-blue-button no-border-radius create-insight-button col-sm-2">Create Insight</button>
+
     </form>
 
   </div>
