--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -1,4 +1,4 @@
-<div class="container" ng-controller="HeaderController">
+<div ng-controller="HeaderController">
   <div class="navbar-header">
     <button class="navbar-toggle" type="button" ng-click="toggleCollapsibleMenu()">
       <span class="sr-only">Toggle navigation</span>
@@ -6,7 +6,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a ui-sref="home" class="navbar-brand" style="font-weight:bold;">Insighter</a>
+    <a ui-sref="home" class="site-title">Insighter</a>
   </div>
   <nav class="collapse navbar-collapse" collapse="!isCollapsed" role="navigation">
     <!--<ul class="nav navbar-nav" ng-if="menu.shouldRender(authentication.user);">
