--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -2,8 +2,8 @@ body, html {
   height: 100%;
 }
 .content {
-  margin-top: 50px;
   height: 100%;
+  margin: 0 0 0 215px;
 }
 .undecorated-link:hover {
   text-decoration: none;
@@ -40,15 +40,12 @@ a:hover .header-profile-image {
 .has-error .help-inline.error-text {
   display: inline;
 }
-.home-create-insight {
+.main-content {
   position: relative;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  margin: auto;
-  height: 100px;
-  max-width: 700px;
+  height: 92%;
+  width: 100%;
+  float: left;
+  padding: 50px;
 }
 .custom-help-block {
   font-style: italic;
@@ -71,31 +68,30 @@ a:hover .header-profile-image {
 .navbar-toggle {
   display: block;
   float: left;
-  margin-right: 0px;
+  margin-right: 0;
+  margin-top: 13px;
 }
 .navbar-toggle span {
   background-color: #D9A275;
   height: 4px !important;
   border-radius: 10px !important;
 }
-.content section {
-  position: relative;
-  float: left;
-  height: 100%;
-}
 .side-menu {
   background-color: #F9F9F9;
+  float: left;
+  width: 215px;
+  height: 100%;
 }
 .clean-hr {
   border-color: gray;
   margin: 0;
 }
 .overlay-top-nav {
-  margin-top: -50px;
   background-color: #F9F9F9;
   width: 100%;
 }
 .side-menu-bottom {
+  float: left;
   padding: 20px 30px;
 }
 .side-menu-bottom > span {
@@ -128,4 +124,17 @@ a:hover .header-profile-image {
 }
 .top-header {
   padding-right: 50px;
+  float: left;
+  width: 100%;
+  height: 8%;
+}
+.create-insight-form {
+  max-width: 700px;
+  margin: auto;
+  height: 70px;
+  top: -8%;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  position: absolute;
 }
