--- a/modules/core/server/views/layout.server.view.html
+++ b/modules/core/server/views/layout.server.view.html
@@ -36,13 +36,14 @@
 </head>
 
 <body class="ng-cloak">
-  <header ng-include="'/modules/core/client/views/header.client.view.html'" class="navbar navbar-fixed-top top-header"></header>
+
+  <section class="side-menu" ng-include="'/modules/core/client/views/side-menu.client.view.html'"></section>
 
   <section class="content">
 
-    <section class="side-menu" ng-include="'/modules/core/client/views/side-menu.client.view.html'"></section>
+    <header ng-include="'/modules/core/client/views/header.client.view.html'" class="top-header"></header>
 
-    <section class="container">
+    <section class="main-content">
       {% block content %}{% endblock %}
     </section>
   </section>
