--- a/modules/core/client/views/side-menu.client.view.html
+++ b/modules/core/client/views/side-menu.client.view.html
@@ -1,5 +1,5 @@
-<div class="navbar-header overlay-top-nav">
-    <button class="navbar-toggle" type="button" ng-click="toggleCollapsibleMenu()">
+<div class="navbar-header overlay-top-nav ng-class:{'bg-white':!showSideMenu};">
+    <button class="navbar-toggle" type="button" ng-click="$root.showSideMenu = !$root.showSideMenu">
       <span class="sr-only">Toggle navigation</span>
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
@@ -8,7 +8,7 @@
     <a ui-sref="home" class="site-title">Insighter</a>
 </div>
 
-<div class="side-menu-bottom">
+<div class="side-menu-bottom ng-class:{'bg-gray':showSideMenu};" ng-show="showSideMenu">
   <span>MENU</span>
   <hr class="clean-hr">
   <ul class="sub-section">
