--- a/modules/core/server/views/layout.server.view.html
+++ b/modules/core/server/views/layout.server.view.html
@@ -42,8 +42,7 @@
   <section class="content">
 
     <header ng-include="'/modules/core/client/views/header.client.view.html'" class="top-header"></header>
-
-    <section class="main-content">
+    <section class="main-content ng-class:{'shift-left' : !showSideMenu};">
       {% block content %}{% endblock %}
     </section>
   </section>
