--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -195,3 +195,9 @@ a:hover .header-profile-image {
   padding: 0 5px;
   font-size: smaller;
 }
+.default-sidebar {
+  padding: 0 20px;
+}
+.span-menu {
+  font-weight: bold;
+}
