darker bg for preview publish buttons

--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -175,7 +175,7 @@ a:hover .header-profile-image {
   font-weight: bold;
 }
 .edit-buttons {
-  background-color: #F5F5F5;
+  background-color: #DCDCDC;
   padding: 5px 0;
 }
 .edit-img {
