--- a/modules/insights/client/views/edit-insight.client.view.html
+++ b/modules/insights/client/views/edit-insight.client.view.html
@@ -1,7 +1,3 @@
-<section ng-controller="InsightsController" ng-init="findOne()">
-  <div class="col-xs-9">
-
-
-    
-  <div>
+<section ng-controller="InsightsController" ng-init="findOne()" class="full-height">
+  <iframe type="text/html" ng-src="{{insight.orig_url | trusted}}" frameborder="0" class="full-height full-width url-frame">
 </section>
