--- a/modules/core/client/views/side-menu.client.view.html
+++ b/modules/core/client/views/side-menu.client.view.html
@@ -1,9 +1,9 @@
 <div class="navbar-header overlay-top-nav ng-class:{'bg-white':!showSideMenu};">
     <button class="navbar-toggle" type="button" ng-click="$root.showSideMenu = !$root.showSideMenu">
       <span class="sr-only">Toggle navigation</span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
+      <span class="icon-bar ng-class:{'yellow-orange':showSideMenu};"></span>
+      <span class="icon-bar ng-class:{'yellow-orange':showSideMenu};"></span>
+      <span class="icon-bar ng-class:{'yellow-orange':showSideMenu};"></span>
     </button>
     <a ui-sref="home" class="site-title">Insighter</a>
 </div>
@@ -34,9 +34,10 @@
   <div ng-hide="showSidebarDefault($state)">
     <div class="edit-title text-center">
       <span>Create new Insight</span>
-      <button type="button" class="close" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+      <button type="button" class="close" aria-label="Close" ui-sref="home()"><span aria-hidden="true">&times;</span></button>
     </div>
     <div class="text-center">
+      <hr class="crossover-strip">
       <form name="insightForm" ng-submit="update(insightForm.$valid)" novalidate>
         <fieldset>
           <div class="form-group edit-buttons text-center">
