--- a/modules/insights/client/css/insights.css
+++ b/modules/insights/client/css/insights.css
@@ -1,3 +1,12 @@
 .hover {
 	cursor: pointer;
 }
+.crossover-strip {
+	position: absolute;
+	width: 100%;
+	border-color: lightgray;
+	margin: 0;
+}
+.url-frame {
+	margin-top: 40px;
+}
