--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -1,14 +1,14 @@
 <div ng-controller="HeaderController">
   <nav class="collapse navbar-collapse" collapse="!isCollapsed" role="navigation">
 
-    <div class="col-xs-6 header-form" ng-show="showHeaderForm($state)">
+    <div class="col-xs-10 header-form" ng-show="showHeaderForm($state)">
       <form name="insightForm" ng-submit="create(insightForm.$valid)" novalidate ng-controller="InsightsController">
         <input type="text" id="orig_url" ng-model="orig_url" placeholder="Enter a URL (e.g. www.techcrunch.com)" class="form-control no-border-radius">
-        <button type="submit" class="btn btn-default no-border-radius">Create Insight</button>
+        <button type="submit" class="btn btn-default no-border-radius header-form-button">Create Insight</button>
       </form>
     </div>
 
-    <div class="col-xs-6 pull-right">
+    <div class="col-xs-2 pull-right">
       <ul class="nav navbar-nav navbar-right" ng-hide="authentication.user">
         <li ui-sref-active="active">
           <a ui-sref="authentication.signup">Sign Up</a>
