format lightbox add embedly script

--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -219,3 +219,8 @@ a:hover .header-profile-image {
 .preview-insight {
   padding: 10px 20px;
 }
+.preview-insight-box {
+  border: none;
+  overflow: hidden;
+  height: 75px;
+}
