--- a/modules/insights/client/views/publish-lightbox-insight.client.view.html
+++ b/modules/insights/client/views/publish-lightbox-insight.client.view.html
@@ -1,18 +1,19 @@
-<div style="padding:15px;">
-    <button ng-click="cancel()" type="button" class="close" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-
+<button ng-click="cancel()" type="button" class="close" aria-label="Close" style="padding: 15px;"><span aria-hidden="true">&times;</span></button>
+<div style="padding:50px;">
     <div class="center-block">
         <div class="form-group form-inline">
-            <label for="orig_url">Link to share:</label>
-            &nbsp;&nbsp;&nbsp;&nbsp;<input type="text" class="form-control" id="orig_url" value="{{insight.url_view}}" disabled>
+            <section class="col-xs-3">Link to share:</section>
+            <section class="col-xs-9"><input type="text" class="form-control" id="orig_url" value="{{insight.url_view}}" disabled></section>
         </div>
     </div>
 
+    <br /><br /><br />
+
      <div class="col-xs-12">
         <div class="col-xs-1"></div>
-        <div class="col-xs-3"><hr></div>
+        <div class="col-xs-3"><hr style="border-top: 1px solid #000"></div>
         <div class="col-xs-1">OR</div>
-        <div class="col-xs-5"><hr></div>
+        <div class="col-xs-5"><hr style="border-top: 1px solid #000"></div>
         <div class="col-xs-2"></div>
      </div>
 
@@ -20,12 +21,16 @@
 
         <div class="form-group">
             <label for="content">Share insighter via:</label>
-            <textarea class="form-control" id="content" ng-bind="insight.content | limitTo:100"></textarea>
+            <p ng-hide="showEditor">{{insight.content | limitTo:100}}... more</p>
+            <input type="text" ng-show="showEditor" class="form-control preview-insight-box" id="content" ng-bind="insight.content" value="{{insight.content | limitTo:100}}">
+            <a href="" ng-click="$root.showEditor = true">edit</a>
         </div>
 
         <!--the original view-->
-        <div class="col-xs-4"></div>
-        <div class="col-xs-8"></div>
+        <section ng-controller="InsightsController" ng-init="getUrlData()" class="embed">
+          <div class="col-xs-4"><img src="{{insightEmbedlyThumbnail}}"></div>
+          <div class="col-xs-8">{{insightEmbedlyDescription}}</div>
+        </section>
 
         <div>
             <div class="col-xs-3"><input type="checkbox">&nbsp;LinkedIn</div>
@@ -35,8 +40,8 @@
         </div>
         <br /><br />
         <div class="form-group text-right">
-          <button type="button" class="btn btn-default" ui-sref="insights.edit({insightId: insight._id})">Cancel</button>
-          <button type="button" class="btn btn-primary" ng-click="update()">Publish</button>
+          <button type="button" class="btn btn-default no-border-radius site-button-width" ui-sref="insights.edit({insightId: insight._id})">Cancel</button>
+          <button type="button" class="btn btn-primary no-border-radius site-button-width" ng-click="update()">Publish</button>
         </div>
 
     </form>
